modules/dataverse/files/iptables
# Generated by iptables-save v1.4.7 on Thu Jan  5 19:59:34 2012
*nat
:PREROUTING ACCEPT [69:11367]
:POSTROUTING ACCEPT [13:1107]
:OUTPUT ACCEPT [13:1107]
-A PREROUTING -p tcp -m tcp --dport 51515 -j REDIRECT --to-ports 22
COMMIT
# Completed on Thu Jan  5 19:59:34 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [7423:626413]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
